[gd_scene load_steps=17 format=3 uid="uid://clmrhe5we7ygs"]

[ext_resource type="Script" path="res://game/scripts/main.gd" id="1_elald"]
[ext_resource type="PackedScene" uid="uid://dci5gt6y02fdw" path="res://game/scenes/player.tscn" id="1_icjvr"]
[ext_resource type="Texture2D" uid="uid://bgxatktl6cb8s" path="res://game/assets/star.png" id="2_d1dxq"]
[ext_resource type="Texture2D" uid="uid://cjb7xxbqthuoi" path="res://game/assets/heart.png" id="4_1cu3d"]
[ext_resource type="AudioStream" uid="uid://b3hwe8b0abkxd" path="res://game/assets/crash.mp3" id="5_dhrqn"]
[ext_resource type="AudioStream" uid="uid://n063vpnaauhc" path="res://game/assets/music.mp3" id="6_2wj84"]

[sub_resource type="Gradient" id="Gradient_1wnox"]
offsets = PackedFloat32Array(0, 0.585455, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.843636, 0.843636, 0.843636, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hlbyk"]
gradient = SubResource("Gradient_1wnox")

[sub_resource type="Curve" id="Curve_oji7c"]
max_value = 3.0
_data = [Vector2(0, 0.117391), 0.0, 0.0, 0, 0, Vector2(1, 0.755754), 1.91237, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6cumq"]
curve = SubResource("Curve_oji7c")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_82cbe"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(144, 81, 1)
spread = 180.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 0.299998
radial_accel_max = 0.499998
scale_min = 0.01
scale_max = 0.01
scale_over_velocity_max = 20.0
scale_over_velocity_curve = SubResource("CurveTexture_6cumq")
color_ramp = SubResource("GradientTexture1D_hlbyk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qyvu"]
size = Vector2(576, 10)

[sub_resource type="LabelSettings" id="LabelSettings_pm4b2"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_xytq2"]
line_spacing = 0.0
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5rg8"]
bg_color = Color(0.0726321, 0.726868, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qydt"]
bg_color = Color(1, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_elald")

[node name="background" type="GPUParticles2D" parent="."]
position = Vector2(288, 162)
amount = 1000
process_material = SubResource("ParticleProcessMaterial_82cbe")
texture = ExtResource("2_d1dxq")
lifetime = 40.0
preprocess = 40.0
speed_scale = 3.0

[node name="Player" parent="." instance=ExtResource("1_icjvr")]
position = Vector2(288, 280)

[node name="asteroid container" type="Node2D" parent="."]

[node name="exit collider" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit collider"]
position = Vector2(288, 369)
shape = SubResource("RectangleShape2D_2qyvu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.814
autostart = true

[node name="lives" type="HBoxContainer" parent="."]
offset_left = 3.0
offset_top = 3.0
offset_right = 6499.0
offset_bottom = 2051.0
scale = Vector2(0.01, 0.01)
theme_override_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="lives"]
layout_mode = 2
texture = ExtResource("4_1cu3d")

[node name="TextureRect2" type="TextureRect" parent="lives"]
layout_mode = 2
texture = ExtResource("4_1cu3d")

[node name="TextureRect3" type="TextureRect" parent="lives"]
layout_mode = 2
texture = ExtResource("4_1cu3d")

[node name="starting text" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 162.0
offset_right = 288.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="starting text"]
layout_mode = 2
text = "Spacegame V2"
label_settings = SubResource("LabelSettings_pm4b2")
horizontal_alignment = 1

[node name="creator" type="Label" parent="starting text"]
layout_mode = 2
text = "By Jacob Kranz"
horizontal_alignment = 1

[node name="description" type="Label" parent="starting text"]
layout_mode = 2
text = "Version 1 was made using pygame, 
version 2 remade with Godot"
label_settings = SubResource("LabelSettings_xytq2")
horizontal_alignment = 1

[node name="green panel" type="PanelContainer" parent="starting text"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r5rg8")

[node name="start button" type="Button" parent="starting text/green panel"]
layout_mode = 2
text = "BEGIN!"
flat = true

[node name="game over text" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 162.0
offset_right = 288.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="title" type="Label" parent="game over text"]
layout_mode = 2
text = "You Lose!"
label_settings = SubResource("LabelSettings_pm4b2")
horizontal_alignment = 1

[node name="score" type="Label" parent="game over text"]
layout_mode = 2
text = "Your Score: "
horizontal_alignment = 1

[node name="red panel" type="PanelContainer" parent="game over text"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2qydt")

[node name="restart button" type="Button" parent="game over text/red panel"]
layout_mode = 2
text = "Restart
"
flat = true

[node name="crash" type="AudioStreamPlayer2D" parent="."]
position = Vector2(288, 162)
stream = ExtResource("5_dhrqn")

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2wj84")
autoplay = true
parameters/looping = true

[connection signal="child_exiting_tree" from="asteroid container" to="." method="_on_asteroid_container_child_exiting_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_up" from="starting text/green panel/start button" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="game over text/red panel/restart button" to="." method="_on_restart_button_button_up"]
